fixed the text wrapping of the text in the addItemDescription to be more like the design

--- a/components/side-bar/shopping-list/shopping-list.module.css
+++ b/components/side-bar/shopping-list/shopping-list.module.css
@@ -65,6 +65,7 @@
   font-weight: 700;
   color: var(--white);
   font-size: var(--m-font);
+  text-wrap: balance;
 }
 
 .addItemButton {
